Re-instate and fix gradle/maven test for async data mongo (#1375)
* Re-instate and fix gradle/maven test for async data mongo

These were skipped over a year ago, and we missed re-instating them.

Fixed for micronaut 4, and re-enabled them.

For the nativeTest, we need to clear down the database after each test.

This is because mongo isn't cleaned up by MicronautTest, and effectively nativeTest
runs the test twice against the same database started by test-resources

* Remove unused import

* And another

* And another

* put assertion back

* Remove public

* Add GE to try and see what's going on

* Increase client timeout for Github Action where resources are low

* Fixed! Removing Gradle Enterprise