@@ -4,7 +4,9 @@ import io.micronaut.http.HttpResponse;
 import io.micronaut.http.HttpStatus;
 import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
 import jakarta.inject.Inject;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
+import reactor.core.publisher.Flux;
 
 import java.util.Arrays;
 import java.util.List;
@@ -22,6 +24,14 @@ class FruitControllerTest {
     @Inject
     FruitClient fruitClient;
 
+    @Inject
+    FruitRepository fruitRepository;
+
+    @AfterEach // <2>
+    void cleanup() {
+        Flux.from(fruitRepository.deleteAll()).blockFirst();
+    }
+
     @Test
     void emptyDatabaseContainsNoFruit() {
         assertEquals(0, StreamSupport.stream(fruitClient.list().spliterator(), false).count());
@@ -34,8 +44,7 @@ class FruitControllerTest {
         Fruit banana = response.getBody().get();
 
         Iterable<Fruit> fruits = fruitClient.list();
-
-        List<Fruit> fruitList = StreamSupport.stream(fruits.spliterator(), false).collect(Collectors.toList());
+        List<Fruit> fruitList = StreamSupport.stream(fruits.spliterator(), false).toList();
         assertEquals(1, fruitList.size());
         assertEquals(banana.getName(), fruitList.get(0).getName());
         assertNull(fruitList.get(0).getDescription());
